[package]
name = "md5"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest_cookie_store = {version="0.7"}
anyhow = {version="1.0.65"}
thiserror = { version = "^1.0.32" }
tokio = { version = "1.12.0", features = ["full"] }
project-root = {version = "0.2.2"}
num-bigint = {version="0.4.4"}
regex = {version="1.10.2"}
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
url = { version = "2"}
rand = "0.8.4"
md5 = "0.7.0"
sha1 = "0.10.5"
sha2 = "0.10"
crc32fast = "1.2.0"
base64ct = "1.6.0"
base16ct = "0.2.0"
chrono = "0.4.35"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
